# star-e

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  INSTALLATION.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
dashboard/: app.py
docs/: PROJECT_DOCUMENTATION.md
frontend/: Dockerfile  README.md  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.tsx  index.css
frontend/src/components/: AllocationPie.tsx  CorrelationHeatmap.tsx  RegimeChart.tsx  TransitionMatrix.tsx  VaRChart.tsx
frontend/src/hooks/: useStore.ts
frontend/src/pages/: Dashboard.tsx  ModelComparison.tsx  Portfolio.tsx  RegimeAnalysis.tsx  RiskDashboard.tsx
frontend/src/utils/: api.ts
src/star_e/: __init__.py  cli.py  config.py
src/star_e/api/: __init__.py  main.py  schemas.py
src/star_e/backtesting/: __init__.py  engine.py  walk_forward.py
src/star_e/data/: __init__.py  binance_stream.py  features.py  ingestion.py  kalman_filter.py  storage.py  validation.py
src/star_e/mlops/: __init__.py  drift.py  tracking.py
src/star_e/models/: __init__.py  base.py  ensemble.py  garch.py  gmm.py  hmm.py  lstm.py  sarima.py  tft.py
src/star_e/portfolio/: __init__.py  cointegration.py  gat.py  metrics.py  optimizer.py  risk.py
tests/: __init__.py  conftest.py  test_data.py  test_models.py  test_portfolio.py
