[project]
name = "star-e"
version = "0.1.0"
description = "Statistical Arbitrage & Risk Engine - Regime-aware portfolio optimization with HMM, GMM, LSTM, TFT, and GAT"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "MIT" }
authors = [
    { name = "Utkarsh Sinha", email = "sinha.utkarshsinha30@gmail.com" }
]
keywords = ["quantitative-finance", "statistical-arbitrage", "hmm", "gat", "tft", "portfolio-optimization", "risk-management"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Data Engineering
    "yfinance>=0.2.40",
    "python-binance>=1.0.19",
    "duckdb>=1.0.0",
    "polars>=0.20.0",
    "pandas>=2.2.0",
    "pyarrow>=15.0.0",

    # Signal Processing & Filtering
    "filterpy>=1.4.5",

    # Statistical Models
    "statsmodels>=0.14.0",
    "hmmlearn>=0.3.0",
    "arch>=6.0.0",
    "scipy>=1.12.0",

    # Machine Learning & Deep Learning
    "torch>=2.2.0",
    "scikit-learn>=1.4.0",
    "pytorch-forecasting>=1.0.0",
    "lightning>=2.2.0",

    # Graph Neural Networks
    "torch-geometric>=2.5.0",
    "networkx>=3.2.0",

    # Visualization
    "plotly>=5.20.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",

    # API Backend
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "websockets>=12.0",

    # MLOps
    "mlflow>=2.11.0",

    # CLI
    "typer>=0.12.0",
    "rich>=13.7.0",
    "streamlit>=1.30.0",

    # Async
    "aiohttp>=3.9.0",
    "asyncio-throttle>=1.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "hypothesis>=6.100.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "pre-commit>=3.6.0",
]

frontend = [
    "nodejs>=0.1.1",
]

[project.scripts]
star-e = "star_e.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/star_e"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["star_e"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=star_e --cov-report=term-missing"
asyncio_mode = "auto"
